# tee_tee_dev_kit

./: OAT.xml  README.en.md  README.md  README_zh.md
ddk/: CHANGELOG  README.md  README_zh.md
ddk/include/: drv_addr_share.h  drv_hwi_share.h  drv_io_share.h  drv_map_share.h  drv_param_ops.h  hm_cache_flush.h  io_operations.h  tee_defines.h  tee_driver_module.h  tee_drv_client.h  tee_log.h  tee_sharemem.h  tee_sharemem_ops.h
docs/TEE_CA_guide/: README-CN.md  README.md  TEE客户端应用开发指导.md  TEE客户端应用开发概述.md  overview-of-tee-ca-development.md  tee-ca-development-guide.md
docs/TEE_OS_guide/: README-CN.md  README.md  TEE-ATF适配指导.md  TEE-Client适配指导.md  TEE-Dev-Kit适配指导.md  TEE-Tzdriver Guide.md  TEE-Tzdriver适配指导.md  TEE-安全镜像Loader适配指导.md  TEE-安全驱动开发指导.md  TEE子系统概述.md  overview-of-tee-subsystem.md  tee-atf-guide.md  tee-client-guide.md  tee-dev-kit-adapt-guide.md  tee-dev-kit-guide.md  tee-security-driver-guide.md  tee-security-mirror-loader-guide.md  tee-tzdriver-guide.md
docs/TEE_TA_guide/: README-CN.md  README.md  Security-Function-Lib.md  TEE-TA-Development-Guide.md  TEE-TA开发指南.md  TEE-TA接口指南.md  TEE安全应用开发概述.md  TEE标准C库支持.md  tee-standard-c-lib-support.md  tee-ta-api-guide.md  tee-ta-debug-guide.md  tee-ta-development-overview.md  安全函数库.md
docs/opentrustee-guidelines/: README-CN.md  develop-ca-and-ta-guidelines.md  opentrustee-adaptation-and-construction-guidelines.md  opentrustee-app-develop-guidelines.md  opentrustee-architecture-and-constraints.md  opentrustee-ca-ta-develop-guidelines.md  opentrustee-compatibility-test-suite-introduction.md  opentrustee-compatibility-test.md  opentrustee-debug-mechanism-introduction.md  opentrustee-debug-mechanism.md  opentrustee-develop-ta-guidelines.md  (+4 more)
sdk/: CHANGELOG  README.md  README_zh.md
sdk/test/TA/secstorage_demo/: CMakeLists.txt  Makefile  config_ta_public.ini  configs.xml  secstorage_demo.c
(+101 files in other folders)
